#1692 Adjusted DynamicModificationOfEntityTypesWithCircularDependencyTest to use the latest NewProperty API.