@@ -31,7 +31,7 @@ public class DynamicModificationOfEntityTypesWithCircularDependencyTest {
 
     private final Calculated calculated = new CalculatedAnnotation().contextualExpression(NEW_PROPERTY_EXPRESSION).newInstance();
 
-    private final NewProperty pd = new NewProperty(NEW_PROPERTY, Money.class, false, NEW_PROPERTY_TITLE, NEW_PROPERTY_DESC, calculated);
+    private final NewProperty<Money> pd = NewProperty.create(NEW_PROPERTY, Money.class, NEW_PROPERTY_TITLE, NEW_PROPERTY_DESC, calculated);
 
     @Before
     public void setUp() {
@@ -41,21 +41,27 @@ public class DynamicModificationOfEntityTypesWithCircularDependencyTest {
     @Test
     public void test_correct_loading_of_modified_types_with_circular_dependencies() throws Exception {
         // get the enhanced CircularChild type
-        final Class<?> circularChildEnhancedType = cl.startModification(CircularChild.class).addProperties(pd).endModification();
+        final Class<? extends CircularChild> modCircularChild = cl.startModification(CircularChild.class)
+                .addProperties(pd)
+                .endModification();
 
-        // specify that what property prop1@CircularParent should have its type replaced with circularChildEnhancedType
-        // get the modified CircularParent type
-        final Class<?> circularParentModifiedType = cl.startModification(CircularParent.class).modifyProperties(NewProperty.changeType("prop1", circularChildEnhancedType)).endModification();
+        // enhance(CircularParent)
+        //      prop1: CircularChild -> modCircularChild
+        final Class<? extends CircularParent> modCircularParent = cl.startModification(CircularParent.class)
+                .modifyProperties(NewProperty.fromField(CircularParent.class, "prop1").changeType(modCircularChild))
+                .endModification();
 
-        // create a new instance of the modified TopLevelEntity type
-        final Object circularParentEntity = circularParentModifiedType.newInstance();
-        assertNotNull("Should not be null.", circularParentEntity);
+        // instantiate the modified CircularParent
+        final CircularParent newModCircularParent = modCircularParent.getConstructor().newInstance();
+        assertNotNull("Should not be null.", newModCircularParent);
 
         // let's correct property type modification
-        final Field circularParentProp1 = circularParentModifiedType.getDeclaredField("prop1");
-        assertEquals("Property prop1 in the modified class CircularParent should be if enhanced type", circularChildEnhancedType, circularParentProp1.getType());
-        final Field circularChildProp1 = Finder.findFieldByName(circularChildEnhancedType, "prop1");
-        assertEquals("Property prop1 in the enhanced class CircularChild should be of not modified type CircularParent", CircularParent.class, circularChildProp1.getType());
+        final Field modCircularParentProp1 = modCircularParent.getDeclaredField("prop1");
+        assertEquals("Property prop1 in the modified class CircularParent should be of enhanced type.", 
+                modCircularChild, modCircularParentProp1.getType());
+        final Field modCircularChildProp1 = Finder.findFieldByName(modCircularChild, "prop1");
+        assertEquals("Property prop1 in the modified class CircularChild should be of original CircularParent type.",
+                CircularParent.class, modCircularChildProp1.getType());
     }
 
 }
